--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -10,8 +10,9 @@ body {
 }
 
 .container {
-    max-width: 1330px !important;
+    max-width: 1630px !important;
 }
 
 @import 'blocks/header';
+@import 'blocks/promo';
 @import 'blocks/footer';
