--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -18,7 +18,7 @@
         top: -10px;
         left: 200px;
         opacity: 0;
-        transition: all .33s;
+        transition: all .44s;
         z-index: -1;
 
         &-two {
@@ -32,7 +32,6 @@
 
             p {
                 width: 280px;
-                
             }
 
             .watch {
@@ -61,7 +60,7 @@
         top: -10px;
         left: 200px;
         opacity: 0;
-        transition: all .33s;
+        transition: all .44s;
         z-index: -1;
 
         &-two {
@@ -75,12 +74,14 @@
 
             p {
                 width: 280px;
-                
             }
 
-            a {
+            .watch {
                 color: #ffffff;
                 text-decoration: none;
+                &:hover {
+                    color: $gray;
+                }
             }
         }
     }
