--- a/src/sass/blocks/_about.scss
+++ b/src/sass/blocks/_about.scss
@@ -29,7 +29,7 @@
 
     .wrapper {
         bottom: 30px;
-        left: 60%;
+        left: 35%;
         position: absolute;
         background-color: #1d1d1d;
         width: 630px;
@@ -46,6 +46,9 @@
             }
 
             a {
+                border: 4px solid;
+                border-image: linear-gradient(98deg, rgba(57,1,62,1) 0%, rgba(99,0,108,1) 17%, rgba(146,0,161,1) 48%, rgba(99,0,108,1) 69%, rgba(57,1,62,1) 100%);
+                border-image-slice: 1;
                 color: #000000;
                 text-decoration: none;
                 background: #CFCFCF;
