--- a/src/sass/blocks/_contact.scss
+++ b/src/sass/blocks/_contact.scss
@@ -1,86 +1,9 @@
 
 .contact {
-    position: relative;
-
-
+    background: url('../images/BG-Vector.svg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    // height: 100vh;
     
-    &::before {
-        content: url('../../images/Daub.svg');
-        display: block;
-        position: absolute;
-        width: 100%;
-        height: auto;
-    }
-    &-about {
 
-        &__title {
-            font-family: 'Dancing Script';
-            font-size: 82px;
-        }
-
-        &__desc {
-            font-size: 20px;
-            font-weight: 300;
-        }
-    }
-
-    &-brif {
-        &__title {
-            font-family: 'Dancing Script';
-            font-size: 64px;
-        }
-
-        &__desc {
-            font-size: 18px;
-            font-weight: 300;
-        }
-    }
-
-    .about-me {
-        font-size: 18px;
-        position: relative;
-
-        &::before {
-            content: url('../../images/Decoration-2.svg');
-            display: block;
-            position: absolute;
-            width: 100%;
-            height: auto;
-            z-index: -1;
-            top: -55px;
-            left: -60px;
-        }
-
-    }
-}
-
-
-@media (max-width: 1360px) {
-    .contact {
-
-        &-wrapper {
-            flex-direction: column-reverse;
-            align-content: center;
-        }
-
-        &-wrap {
-            max-width: 65%;
-        }
-
-        &-about {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        &-brif {
-            flex-direction: column;
-        }
-
-
-    }
-
-    .wrap {
-        text-align: center;
-    }
 }
