--- a/src/sass/blocks/_about.scss
+++ b/src/sass/blocks/_about.scss
@@ -1,68 +1,70 @@
-.about {
-    height: 70vh;
+// .about {
+//     height: 70vh;
 
-    .swiper-container {
-        width: 100%;
-        height: 100%;
-    }
+//     .swiper-container {
+//         width: 100%;
+//         height: 100%;
+//     }
 
-    .swiper-slide {
-        position: relative;
-        text-align: center;
-        font-size: 18px;
-        // background: #fff;
+//     .swiper-slide {
+//         position: relative;
+//         text-align: center;
+//         font-size: 18px;
+//         // background: #fff;
 
-        /* Center slide text vertically */
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: -webkit-flex;
-        display: flex;
-        -webkit-box-pack: center;
-        -ms-flex-pack: center;
-        -webkit-justify-content: center;
-        justify-content: center;
-        -webkit-box-align: center;
-        -ms-flex-align: center;
-        -webkit-align-items: center;
-        align-items: center;
-    }
+//         /* Center slide text vertically */
+//         display: -webkit-box;
+//         display: -ms-flexbox;
+//         display: -webkit-flex;
+//         display: flex;
+//         -webkit-box-pack: center;
+//         -ms-flex-pack: center;
+//         -webkit-justify-content: center;
+//         justify-content: center;
+//         -webkit-box-align: center;
+//         -ms-flex-align: center;
+//         -webkit-align-items: center;
+//         align-items: center;
+//     }
 
-    .wrapper {
-        bottom: 30px;
-        left: 35%;
-        position: absolute;
-        background-color: #1d1d1d;
-        width: 630px;
-        border: 3px solid $pink-dark;
+//     .wrapper {
+//         bottom: 30px;
+//         left: 35%;
+//         position: absolute;
+//         background-color: #1d1d1d;
+//         width: 630px;
+//         border: 3px solid $pink-dark;
 
-        h1 {
-            font-size: 30px;
-        }
+//         h1 {
+//             font-size: 30px;
+//         }
 
-        .order {
-            p {
-                color: #CFCFCF;
-                font-size: 14px;
-            }
+//         .order {
+//             p {
+//                 color: #CFCFCF;
+//                 font-size: 14px;
+//             }
 
-            a {
-                border: 4px solid;
-                border-image: linear-gradient(98deg, rgba(57,1,62,1) 0%, rgba(99,0,108,1) 17%, rgba(146,0,161,1) 48%, rgba(99,0,108,1) 69%, rgba(57,1,62,1) 100%);
-                border-image-slice: 1;
-                color: #000000;
-                text-decoration: none;
-                background: #CFCFCF;
-                font-family: 'Comfortaa';
-                font-weight: 900;
-            }
-        }
-    }
-}
+//             a {
+//                 border: 4px solid;
+//                 border-image: linear-gradient(98deg, rgba(57,1,62,1) 0%, rgba(99,0,108,1) 17%, rgba(146,0,161,1) 48%, rgba(99,0,108,1) 69%, rgba(57,1,62,1) 100%);
+//                 border-image-slice: 1;
+//                 color: #000000;
+//                 text-decoration: none;
+//                 background: #CFCFCF;
+//                 font-family: 'Comfortaa';
+//                 font-weight: 900;
+//             }
+//         }
+//     }
+// }
 
-.swiper-button-next::after, .swiper-container-rtl .swiper-button-prev::after {
-    color: wheat;
-}
+// .swiper-button-next::after, .swiper-container-rtl .swiper-button-prev::after {
+//     color: wheat;
+// }
 
-.swiper-button-prev::after, .swiper-container-rtl .swiper-button-next::after {
-    color: wheat;
-}
+// .swiper-button-prev::after, .swiper-container-rtl .swiper-button-next::after {
+//     color: wheat;
+// }
+
+
