--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -4,14 +4,26 @@
         cursor: pointer;
         position: relative;
         z-index: 111;
+
+        &-span {
+            &:after {
+                content: url('../images/span.svg');
+                position: absolute;
+                bottom: 0;
+                display: block;
+                z-index: 100;
+            }
+        }
+
+        
     }
+
 
     .help {
         position: absolute;
         width: 700px;
         height: 200px;
         display: inline-block;
-        // background: #eee;
         border: 2px solid rgb(93, 0, 101);
         padding: 20px;
         margin: 0 55px;
@@ -53,7 +65,6 @@
         width: 700px;
         height: 200px;
         display: inline-block;
-        // background: #eee;
         border: 2px solid rgb(93, 0, 101);
         padding: 20px;
         margin: 0 55px;
