--- a/src/sass/blocks/_contact.scss
+++ b/src/sass/blocks/_contact.scss
@@ -2,8 +2,49 @@
 .contact {
     background: url('../images/BG-Vector.svg');
     background-repeat: no-repeat;
-    background-size: cover;
-    // height: 100vh;
-    
+    background-size: contain;
+    background-position-x: right;
+    height: 90vh;
+    padding-top: 70px;
+}
 
+.avatar {
+
+    img {
+        position: relative;
+
+    }
+
+    &::after {
+        content: url('../images/span-natalya.svg');
+        display: block;
+        position: absolute;
+        bottom: -100px;
+        left: -70px;
+    }
+}
+
+
+.about-natalya {
+    h4 {
+        font-size: 40px;
+    }
+
+    p {
+        font-size: 20px;
+    }
+}
+
+.about-me {
+    position: absolute;
+    width: 700px;
+    display: inline-block;
+    border: 3px solid;
+    border-image: linear-gradient(98deg, rgba(57, 1, 62, 1) 0%, rgba(99, 0, 108, 1) 17%, rgba(146, 0, 161, 1) 48%, rgba(99, 0, 108, 1) 69%, rgba(57, 1, 62, 1) 100%);
+    border-image-slice: 1;
+    padding: 40px;
+    bottom: -100px;
+    left: 420px;
+    transition: all .44s;
+    z-index: -1;
 }
