--- a/src/sass/blocks/_process.scss
+++ b/src/sass/blocks/_process.scss
@@ -1,7 +1,7 @@
 .process {
 
     &-title {
-        font-family: 'Megante';
+        font-family: Comfortaa;
         background: linear-gradient(98deg, rgba(57, 1, 62, 1) 0%, rgba(99, 0, 108, 1) 17%, rgba(146, 0, 161, 1) 48%, rgba(99, 0, 108, 1) 69%, rgba(57, 1, 62, 1) 100%);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
