--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -8,7 +8,7 @@ body {
     font-size: 16px;
     background: #111111;
     color: #E6E6E6;
-    font-family: 'Comfortaa', 'Dancing Script', 'Megante', cursive;
+    font-family: 'Comfortaa', 'Montserrat', cursive;
 }
 
 .container {
@@ -20,7 +20,7 @@ body {
 }
 
 ::selection {
-    color: $pink-dark;
+    background-color: $pink-dark;
 }
 
 @import 'blocks/header';
@@ -30,6 +30,8 @@ body {
 @import 'blocks/process';
 @import 'blocks/contact';
 @import 'blocks/origin';
+@import 'blocks/brif';
+
 
 
 
