--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -8,7 +8,7 @@ body {
     font-size: 16px;
     background: #111111;
     color: #E6E6E6;
-    font-family: 'Comfortaa', 'Montserrat', cursive;
+    font-family: 'Comfortaa', 'Montserrat', sans-serif;
 }
 
 .container {
