--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -17,6 +17,8 @@
         }
 
         
+
+        
     }
 
 
@@ -31,10 +33,12 @@
         padding: 20px;
         margin: 0 55px;
         top: -10px;
-        left: 200px;
+        left: 100px;
         opacity: 0;
         transition: all .44s;
         z-index: -1;
+
+        
 
         &-two {
             margin: 0 35px;
@@ -61,6 +65,22 @@
 
     .help.active {
         opacity: 1;
+        transform: translateX(100px);
+
+    }
+    .help-two.active {
+        opacity: 1;
+        transform: translateX(-100px);
+    }
+
+    .house-tw.active {
+        opacity: 1;
+        transform: translateX(100px);
+    }
+
+    .house-th.active {
+        opacity: 1;
+        transform: translateX(-100px)
     }
     
     .house {
@@ -74,7 +94,7 @@
         padding: 20px;
         margin: 0 55px;
         top: -10px;
-        left: 200px;
+        left: 100px;
         opacity: 0;
         transition: all .44s;
         z-index: -1;
