--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -40,12 +40,13 @@
 }
 
 .raffle {
-    
+
     &-link {
         border: 2px solid rgb(93, 0, 101);
         text-decoration: none;
-        color: #BDBDBD;;
-        font-size: 20px;
+        color: #BDBDBD;
+        ;
+        font-size: 18px;
         transition: all .33s;
         padding: 5px 10px 5px 10px;
 
@@ -60,9 +61,10 @@
     &__link {
         color: #BDBDBD;
         transition: all .33s;
-        
+
 
         margin-left: 20px;
+
         span {
             color: $pink-light;
 
@@ -87,6 +89,40 @@
 }
 
 
+#nav:checked+.nav-btn {
+    transform: rotate(45deg);
+}
+
+#nav:checked+.nav-btn i {
+    background: #fff;
+    transition: transform 0.2s ease;
+}
+
+#nav:checked+.nav-btn i:nth-child(1) {
+    transform: translateY(6px) rotate(180deg);
+}
+
+#nav:checked+.nav-btn i:nth-child(2) {
+    opacity: 0;
+}
+
+#nav:checked+.nav-btn i:nth-child(3) {
+    transform: translateY(-6px) rotate(90deg);
+}
+
+#nav:checked~.nav-wrapper {
+    z-index: 9990;
+    opacity: 1;
+}
+
+#nav:checked~.nav-wrapper ul li a {
+    opacity: 1;
+    transform: translateX(0);
+}
+
+.hidden {
+    display: none;
+}
 
 @media screen and (max-width: $screen-md-max) {
     .menu-main {
@@ -109,131 +145,115 @@
     }
 
     .nav-wrapper {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: -1;
-            background: #000;
-            opacity: 0;
-            transition: all 0.2s ease;
-      }
- 
-      .nav-wrapper ul {
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            width: 100%;
-      }
- 
-      .nav-wrapper ul li {
-            display: block;
-            float: none;
-            width: 100%;
-            text-align: right;
-            margin-bottom: 40px;
-      }
- 
-      .nav-wrapper ul li:nth-child(1) a {
-            transition-delay: 0.2s;
-      }
- 
-      .nav-wrapper ul li:nth-child(2) a {
-            transition-delay: 0.3s;
-      }
- 
-      .nav-wrapper ul li:nth-child(3) a {
-            transition-delay: 0.4s;
-      }
- 
-      .nav-wrapper ul li:nth-child(4) a {
-            transition-delay: 0.5s;
-      }
- 
-      .nav-wrapper ul li:not(:first-child) {
-            margin-left: 0;
-      }
- 
-      .nav-wrapper ul li a {
-            padding: 10px 24px;
-            opacity: 0;
-            color: #fff;
-            font-size: 20px;
-            font-weight: 200;
-            letter-spacing: 1.2px;
-            transform: translateX(-20px);
-            transition: all 0.2s ease;
-      }
- 
-      .nav-btn {
-            position: fixed;
-            right: 10px;
-            top: 10px;
-            display: block;
-            width: 48px;
-            height: 48px;
-            cursor: pointer;
-            z-index: 9999;
-            border-radius: 50%;
-      }
- 
-      .nav-btn i {
-            display: block;
-            width: 20px;
-            height: 2px;
-            background: #fff;
-            border-radius: 2px;
-            margin-left: 14px;
-      }
- 
-      .nav-btn i:nth-child(1) {
-            margin-top: 16px;
-      }
- 
-      .nav-btn i:nth-child(2) {
-            margin-top: 4px;
-            opacity: 1;
-      }
- 
-      .nav-btn i:nth-child(3) {
-            margin-top: 4px;
-      }
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        background: #000;
+        opacity: 0;
+        transition: all 0.2s ease;
+    }
 
+    .nav-wrapper ul {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        width: 100%;
+    }
+
+    .nav-wrapper ul li {
+        display: block;
+        float: none;
+        width: 100%;
+        text-align: right;
+        margin-bottom: 40px;
+    }
+
+    .nav-wrapper ul li:nth-child(1) a {
+        transition-delay: 0.2s;
+    }
+
+    .nav-wrapper ul li:nth-child(2) a {
+        transition-delay: 0.3s;
+    }
+
+    .nav-wrapper ul li:nth-child(3) a {
+        transition-delay: 0.4s;
+    }
+
+    .nav-wrapper ul li:nth-child(4) a {
+        transition-delay: 0.5s;
+    }
+
+    .nav-wrapper ul li:not(:first-child) {
+        margin-left: 0;
+    }
+
+    .nav-wrapper ul li a {
+        padding: 10px 24px;
+        opacity: 0;
+        color: #fff;
+        font-size: 20px;
+        font-weight: 200;
+        letter-spacing: 1.2px;
+        transform: translateX(-20px);
+        transition: all 0.2s ease;
+    }
+
+    .nav-btn {
+        position: fixed;
+        right: 10px;
+        top: 10px;
+        display: block;
+        width: 48px;
+        height: 48px;
+        cursor: pointer;
+        z-index: 9999;
+        border-radius: 50%;
+    }
+
+    .nav-btn i {
+        display: block;
+        width: 20px;
+        height: 2px;
+        background: #fff;
+        border-radius: 2px;
+        margin-left: 14px;
+    }
+
+    .nav-btn i:nth-child(1) {
+        margin-top: 16px;
+    }
+
+    .nav-btn i:nth-child(2) {
+        margin-top: 4px;
+        opacity: 1;
+    }
+
+    .nav-btn i:nth-child(3) {
+        margin-top: 4px;
+    }
 }
 
-#nav:checked + .nav-btn {
-    transform: rotate(45deg);
-}
+@media (max-width: 1114px) {
+    .menu {
+        width: 100%;
+        margin-top: 20px;
+    }
 
-#nav:checked + .nav-btn i {
-    background: #fff;
-    transition: transform 0.2s ease;
-}
+    .raffle {
+        margin-top: 20px
+    }
 
-#nav:checked + .nav-btn i:nth-child(1) {
-    transform: translateY(6px) rotate(180deg);
-}
+    .menu-main {
+        display: flex;
+        flex-direction: column-reverse;
+    }
 
-#nav:checked + .nav-btn i:nth-child(2) {
-    opacity: 0;
-}
-
-#nav:checked + .nav-btn i:nth-child(3) {
-    transform: translateY(-6px) rotate(90deg);
-}
-
-#nav:checked ~ .nav-wrapper {
-    z-index: 9990;
-    opacity: 1;
-}
-
-#nav:checked ~ .nav-wrapper ul li a {
-    opacity: 1;
-    transform: translateX(0);
-}
-
-.hidden {
-    display: none;
+    .menu__link {
+        margin-left: 0px;
+    }
 
 }
