--- a/src/sass/blocks/_brif.scss
+++ b/src/sass/blocks/_brif.scss
@@ -34,6 +34,7 @@ $transitionSpeed: 200ms;
 
 
 .main-brif {
+    width: 100%;
     border: 3px solid;
     border-image: linear-gradient(98deg, rgba(57, 1, 62, 1) 0%, rgba(99, 0, 108, 1) 17%, rgba(146, 0, 161, 1) 48%, rgba(99, 0, 108, 1) 69%, rgba(57, 1, 62, 1) 100%);
     border-image-slice: 1;
@@ -45,7 +46,6 @@ $transitionSpeed: 200ms;
 
 
 .left-block {
-    width: 25%;
     p {
         font-family: Comfortaa;
         font-style: normal;
@@ -63,7 +63,7 @@ $transitionSpeed: 200ms;
     }
 }
 
-input[type="checkbox"]+label {
+.inp-check+label {
     width: 30px;
     height: 30px;
     border: 3px solid;
@@ -98,7 +98,7 @@ input[type="checkbox"]+label {
     }
 }
 
-input[type="checkbox"]:checked+label {
+.inp-check:checked+label {
     border: 3px solid white;
     background-color: $pink-light;
 
