--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -127,3 +127,23 @@
         opacity: 1;
     }
 }
+
+
+@media (max-width: 1565px) {
+    .projects-lists {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .projects-item {
+        margin-bottom: 40px;
+    }
+}
+
+@media (max-width: 1300px) {
+    .promo .help,
+    .promo .house {
+        margin: 0 -20px;
+    }
+}
+
