--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -104,44 +104,93 @@
     display: none;
 }
 
+.hamburger {
+  position: fixed;
+  top: 32px;
+  right: 16px;
+  z-index: 99;
+  cursor: pointer;
+  width: 32px;
+  height: 32px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-#nav:checked+.nav-btn {
-    transform: rotate(45deg);
+  span {
+    transition: all .33s;
+    position: relative;
+    display: block;
+    background-color: #fff;
+    width: 32px;
+    height: 2px;
+
+    &:after, &:before {
+      content: '';
+      transition: all .33s;
+      display: block;
+      position: absolute;
+      width: 24px;
+      height: 2px;
+      background-color: #fff;
+      left: 4px;
+    }
+      
+    &:after {
+      top: -6px;
+    }
+    &:before {
+      bottom: -6px;
+    }
+  }
+    
+   
+
+    
+  &.active {
+    span {
+      background-color: transparent;
+      &:after, &:before {
+        top: 0;
+        bottom: 0;
+      }
+        
+      &:after {
+        transform: rotate(-45deg);
+      }
+
+      &:before {
+        transform: rotate(45deg);
+      }
+    }
+  }
 }
 
-#nav:checked+.nav-btn i {
-    background: #fff;
-    transition: transform 0.2s ease;
-}
+menu {
+    margin: 0;
+    padding: 0;
+    position: fixed;
+    z-index: 98;
+    transition: all .33s;
+    right: -100%;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #030012;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 
-#nav:checked+.nav-btn i:nth-child(1) {
-    transform: translateY(6px) rotate(180deg);
-}
+  &.active {
+    right: 0;
+  }
 
-#nav:checked+.nav-btn i:nth-child(2) {
-    opacity: 0;
-}
-
-#nav:checked+.nav-btn i:nth-child(3) {
-    transform: translateY(-6px) rotate(90deg);
-}
-
-#nav:checked~.nav-wrapper {
-    z-index: 9990;
-    opacity: 1;
-}
-
-#nav:checked~.nav-wrapper ul li a {
-    opacity: 1;
-    transform: translateX(0);
-}
-
-.hidden {
-    display: none;
-}
-
-.nav-wrapper {
-  text-align: center;
+  a {
+    margin: 16px;
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+  }
 }
   .sl-nav {
   display: inline;
@@ -259,7 +308,7 @@
         top: 0;
         left: 0;
         width: 100%;
-        height: 100%;
+        // height: 100%;
         z-index: -1;
         background: #000;
         opacity: 0;
