--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -3,7 +3,7 @@
     &-pic {
         cursor: pointer;
         position: relative;
-        z-index: 111;
+        // z-index: 111;
 
         &-span {
             &:after {
@@ -120,6 +120,18 @@
                 &:hover {
                     color: $gray;
                 }
+
+                &:active {
+                    color: $gray;
+                }
+
+                &:focus {
+                    color: $gray;
+                }
+
+                &:visited {
+                    color: $gray;
+                }
             }
         }
     }
@@ -130,6 +142,34 @@
     }
 }
 
+
+#mob1,
+#mob2,
+#mob3,
+#mob4 {
+    .watch {
+        text-decoration: none
+        &:hover {
+                    color: $gray;
+        text-decoration: none
+
+                }
+
+                &:active {
+                    color: white;
+        text-decoration: none
+
+                }
+
+                &:focus {
+                    color: white;
+        text-decoration: none
+                
+                }
+
+                
+    }
+}
 
 @media (max-width: 1565px) {
     .projects-lists {
